--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.0.0",
     "react": "^18.3.1",
